--- a/thus.html
+++ b/thus.html
@@ -12,9 +12,9 @@
 <script async="" src="./thus_files/analytics.js"></script><script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/reestart.com\/","name":"Reestart","potentialAction":{"@type":"SearchAction","target":"http:\/\/reestart.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
 <!-- / Yoast SEO plugin. -->
 
-<link rel="stylesheet" id="reestart_fonts-css" href="./thus_files/css" type="text/css" media="all">
-<link rel="stylesheet" id="reestart-css" href="./thus_files/reestart.css" type="text/css" media="all">
-<script type="text/javascript" src="./thus_files/reestart-head.js"></script>
+<link rel="stylesheet" id="reestart_fonts-css" href="css" type="text/css" media="all">
+<link rel="stylesheet" id="reestart-css" href="reestart.css" type="text/css" media="all">
+<script type="text/javascript" src="reestart-head.js"></script>
 <link rel="https://api.w.org/" href="http://reestart.com/wp-json/">
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://reestart.com/xmlrpc.php?rsd">
 <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://reestart.com/wp-includes/wlwmanifest.xml"> 
