--- a/thus.html
+++ b/thus.html
@@ -423,7 +423,7 @@ $(document).ready(function(){
       <figure>
         <a href="http://github.com/apineapple">
           <div class="img-wrapper">
-            <img src="./thus_files/as.png">            <div class="blocktitle">
+            <img src="as.png">            <div class="blocktitle">
               <h2 style="color: #478FFF;">Web Creation</h2>
               <ul>
                 <li><strong><a style="color: white;" href="https://apineapple.github.io/Music/21_Playlist.html">21 Playlists</a></strong></li><li><strong><a style="color: white;" href="https://apineapple.github.io/Eucalyptus">Eucalyptus</a></strong></li><li><strong><a style="color: white;" href="http://apineapple.github.io/Easter-Egg/">Easter Egg</a>             </ul>
