--- a/thus.html
+++ b/thus.html
@@ -411,7 +411,7 @@ $(document).ready(function(){
           <h3 style="color: #478FFF; margin-bottom: 5px; font-weight: 300;">Intro</h3>
         	<h4>Apineapple</h4>            <h5>Founder of Soda Pop Shop</h5>        </div>
         	        <aside class="grow-1 gradient">
-	          <div class="circle-img" id="info" style="background-image: url(thus_files/imgres.jpg)"></div>
+	          <div class="circle-img" id="info" style="background-image: url(imgres.jpg)"></div>
 	        </aside>
               </div>
       <blockquote>
@@ -447,7 +447,7 @@ $(document).ready(function(){
           <h3 style="color: #478FFF; margin-bottom: 5px; font-weight: 300;">Colaborators Welcome</h3>
          </div>
         	        <aside class="grow-1 gradient">
-	          <div class="circle-img" style="background-image: url(thus_files/user_male_circle_filled1600.png)"></div>
+	          <div class="circle-img" style="background-image: url(user_male_circle_filled1600.png)"></div>
 	        </aside>
               </div>
       <blockquote>
@@ -458,7 +458,7 @@ $(document).ready(function(){
       <figure>
         <a href=>
           <div class="img-wrapper">
-            <img src="./thus_files/vignette-gogomitch.jpg">            <div class="blocktitle">
+            <img src="vignette-gogomitch.jpg">            <div class="blocktitle">
               <h2 style="color: #478FFF;">App Develpment</h2>
               <ul>
                 <li></li>              </ul>
