Update and rename thus.html to index.html

--- a/index.html
+++ b/index.html
@@ -484,4 +484,4 @@ $(document).ready(function(){
 	ga('create', 'UA-59837761-1', 'auto');
 	ga('send', 'pageview');
 
-</script><!--  --><script type="text/javascript" src="./thus_files/reestart.js"></script></body></html>
+</script><!--  --><script type="text/javascript" src="reestart.js"></script></body></html>
