--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Ensemble, créons votre réussite digitale.">
 <meta name="robots" content="noodp">
 <link rel="canonical" href="http://reestart.com/">
-<script async="" src="./thus_files/analytics.js"></script><script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/reestart.com\/","name":"Reestart","potentialAction":{"@type":"SearchAction","target":"http:\/\/reestart.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+<script async="" src="analytics.js"></script><script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/reestart.com\/","name":"Reestart","potentialAction":{"@type":"SearchAction","target":"http:\/\/reestart.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
 <!-- / Yoast SEO plugin. -->
 
 <link rel="stylesheet" id="reestart_fonts-css" href="css" type="text/css" media="all">
