--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ $(document).ready(function(){
           <h3 style="color: #555; margin-bottom: 5px; font-weight: 300;">News</h3>
         	<h5>This is where updates are posted</h5></div>
         	        <aside class="grow-1 gradient">
-	          <div id="image" class="circle-img" id="info" style="background-image: url(http://www.clker.com/cliparts/F/F/i/T/a/6/warning-triangle-hi.png)"></div>
+	          <div id="image" class="circle-img" id="info" style="background-image: url(warning-triangle-hi.png)"></div>
 	        </aside>
               </div>
               <br><br><br>
