--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<body id="home" class="" style="background-color: #478FFF;">
+<body id="home" class="" style="background-color: #a57fc0;">
 
 <div id="loader-wrapper" class="loaded" style="visibility: hidden; ">
 	<div id="loader" class="" style="visibility: hidden;"><svg xmlns="http://www.w3.org/2000/svg" width="509.779px" height="485.582px" viewBox="0 0 509.779 485.582">
@@ -314,12 +314,12 @@ $(document).ready(function(){
 </div>
     <div class="loader-overlay"></div>
 </div>
-    <div class="navbar navbar-default navbar-fixed-top affix" style="" style="background-color: blue;">    </div><header id="front" style="height: 610px;">
-  <canvas id="canvas" style="position: absolute; top: 0; z-index: 1; background-color: yellow;" width="1366" height="610"></canvas>
+    <div class="navbar navbar-default navbar-fixed-top affix" style="" style="background-color: #a57fc0;">    </div><header id="front" style="height: 610px;">
+  <canvas id="canvas" style="position: absolute; top: 0; z-index: 1; background-color: #8cdb7d;" width="1366" height="610"></canvas>
   <article class="container-fluid fullheight hbox">
     <section class="vbox box-right fullwidth">
-      <h1 class="wow fadeInUp axis" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp; color: blue;"><div>Soda Pop Shop</div></h1>
-      <h3 class="wow fadeInUp" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp; color: purple;">A developer's upfront</h3>
+      <h1 class="wow fadeInUp axis" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp; color: #a57fc0;"><div>Soda Pop Shop</div></h1>
+      <h3 class="wow fadeInUp" data-wow-delay=".6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp; color: #a57fc0;">A developer's upfront</h3>
 	  <p></p>
     </section>
   </article>
@@ -358,38 +358,38 @@ $(document).ready(function(){
     <article class="timeline-body wow fadeInLeft col-md-5 vbox align-v" style="visibility: visible; animation-name: fadeInLeft;">
       <div class="hbox">
         <div id="bulletin" style="background-color: white; border: solid;" class="grow-2 box vbox align-v">
-          <h3 style="color: #555; margin-bottom: 5px; font-weight: 300;">News</h3>
+          <h3 style="color: #8cdb7d; margin-bottom: 5px; font-weight: 300;">News</h3>
         	<h5>This is where updates are posted</h5></div>
         	        <aside class="grow-1 gradient">
-	          <div id="image" class="circle-img" id="info" style="background-image: url(warning-triangle-hi.png)"></div>
+	          <div id="image" class="circle-img" id="info" style="background-image: url(http://www.clker.com/cliparts/F/F/i/T/a/6/warning-triangle-hi.png)"></div>
 	        </aside>
               </div>
-              <br><br><br>
-               <div id="a" style="background-color:  #478FFF; color: white; cursor: pointer;">
+              <br>
+               <div id="a" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
     <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
     <h3 style="text-align: left;">&nbsp;Alert!</h3>
     <p style="text-align: center;">This site is Live in Version 1.3.47</p>
     </div>
     <br>
-              <div id="b" style="background-color:  #478FFF; color: white; cursor: pointer;">
+              <div id="b" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
     <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
     <h3 style="text-align: left;">&nbsp;Alert!</h3>
     <p style="text-align: center;">Shuffle Button added in version 1.4.65</p>
     </div>
     <br>
-     <div id="b" style="background-color:  #478FFF; color: white; cursor: pointer;">
+     <div id="b" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
     <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
     <h3 style="text-align: left;">&nbsp;Alert!</h3>
     <p style="text-align: center;">Coder-Site Live Version 1.0 (Based on W3 School)</p>
     </div>
     <br>
-     <div id="c" style="background-color:  #478FFF; color: white; cursor: pointer;">
+     <div id="c" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
     <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
     <h3 style="text-align: left;">&nbsp;Alert!</h3>
     <p style="text-align: center;">Video <strong style="color: red;">Beta</strong> Live Version 0.2.37</p>
 	</div>
 	<br>
-    <div id="d" style="background-color:  #478FFF; color: white; cursor: pointer;">
+    <div id="d" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
     <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
     <h3 style="text-align: left;">&nbsp;Alert!</h3>
     <p style="text-align: center;">Eucalyptus, an old pet project is back in Version 0.9.7</p>
@@ -408,14 +408,14 @@ $(document).ready(function(){
     <article class="timeline-body wow fadeInLeft col-md-5 vbox align-v" style="visibility: visible; animation-name: fadeInLeft;">
       <div class="hbox">
         <div class="grow-2 box vbox align-v">
-          <h3 style="color: #478FFF; margin-bottom: 5px; font-weight: 300;">Intro</h3>
-        	<h4>Apineapple</h4>            <h5>Founder of Soda Pop Shop</h5>        </div>
+          <h3 style="color: #8cdb7d; margin-bottom: 5px; font-weight: 300;">Intro</h3>
+        	<h4 style="color: #8cdb7d;">Apineapple</h4>            <h5 style="color: #8cdb7d;">Founder of Soda Pop Shop</h5>        </div>
         	        <aside class="grow-1 gradient">
 	          <div class="circle-img" id="info" style="background-image: url(imgres.jpg)"></div>
 	        </aside>
               </div>
       <blockquote>
-      	<div>I am a semi-amateur programer with experience in Html, Css, and "bootstrap", and I know a bit of Python, Js, Jquery, and Commandline on the side. I work with other more expierenced programers when the chance pops up, but I most of what I know is from w3Schools or Stack Overflow, in addition to the rest of the internet. Most of my work is on github but I hope to start mobile game development in the future.
+      	<div style="color: #a57fc0;">I am a semi-amateur programer with experience in Html, Css, and "bootstrap", and I know a bit of Python, Js, Jquery, and Commandline on the side. I work with other more expierenced programers when the chance pops up, but I most of what I know is from w3Schools or Stack Overflow, in addition to the rest of the internet. Most of my work is on github but I hope to start mobile game development in the future.
 </div>      </blockquote>
       <a href="https://github.com/apineapple" style="color: darkgrey;" class="btn btn-primary">View Git Profile</a>
     </article>
@@ -424,15 +424,15 @@ $(document).ready(function(){
         <a href="http://github.com/apineapple">
           <div class="img-wrapper">
             <img src="as.png">            <div class="blocktitle">
-              <h2 style="color: #478FFF;">Web Creation</h2>
+              <h2 style="color: #8cdb7d;">Web Creation</h2>
               <ul>
-                <li><strong><a style="color: white;" href="https://apineapple.github.io/Music/21_Playlist.html">21 Playlists</a></strong></li><li><strong><a style="color: white;" href="https://apineapple.github.io/Eucalyptus">Eucalyptus</a></strong></li><li><strong><a style="color: white;" href="http://apineapple.github.io/Easter-Egg/">Easter Egg</a>             </ul>
+                <li><strong><a style="color: #8cdb7d;" href="https://apineapple.github.io/Music/21_Playlist.html">21 Playlists</a></strong></li><li><strong><a style="color: #8cdb7d;" href="https://apineapple.github.io/Eucalyptus">Eucalyptus</a></strong></li><li><strong><a style="color: #8cdb7d;" href="http://apineapple.github.io/Easter-Egg/">Easter Egg</a>             </ul>
             </div>
           </div>
         </a>
         <figcaption>
-          <p>More Major Websites Will Be Created</p>          <ul>
-          	<li><small>Thank you for looking at my Art</small></li></ul>
+          <p style="color: #a57fc0;">More Major Websites Will Be Created</p>          <ul>
+          	<li style="color: #a57fc0;"><small>Thank you for looking at my Art</small></li></ul>
                   </figcaption>
       </figure>
     </div>
@@ -444,14 +444,14 @@ $(document).ready(function(){
     <article class="timeline-body wow fadeInRight col-md-5 vbox align-v" style="visibility: visible; animation-name: fadeInRight;">
       <div class="hbox">
         <div class="grow-2 box vbox align-v">
-          <h3 style="color: #478FFF; margin-bottom: 5px; font-weight: 300;">Colaborators Welcome</h3>
+          <h3 style="color: #8cdb7d; margin-bottom: 5px; font-weight: 300;">Colaborators Welcome</h3>
          </div>
         	        <aside class="grow-1 gradient">
 	          <div class="circle-img" style="background-image: url(user_male_circle_filled1600.png)"></div>
 	        </aside>
               </div>
       <blockquote>
-      	<div>Though money is not currently an option, those who know the true identity of Apineapple and have a reasonable amount of expierience are welcome to contribute coding, ideas, or graphics to the table. Send messages to the adress bellow it you are interested.</div>      </blockquote>
+      	<div style="color: #a57fc0;">Though money is not currently an option, those who know the true identity of Apineapple and have a reasonable amount of expierience are welcome to contribute coding, ideas, or graphics to the table. Send messages to the adress bellow it you are interested.</div>      </blockquote>
       <a href="" style="color: darkgrey;" class="btn btn-primary">obiwonton123@gmail.com</a>
     </article>
     <div class="timeline-heading wow fadeInLeft col-md-5 col-xlg-4" style="visibility: visible; animation-name: fadeInLeft;">
@@ -459,15 +459,15 @@ $(document).ready(function(){
         <a href=>
           <div class="img-wrapper">
             <img src="vignette-gogomitch.jpg">            <div class="blocktitle">
-              <h2 style="color: #478FFF;">App Develpment</h2>
+              <h2 style="color: #8cdb7d">App Develpment</h2>
               <ul>
                 <li></li>              </ul>
             </div>
           </div>
         </a>
         <figcaption>
-          <p>Nothing yet, but high hopes from the future</p>          <ul>
-          	<li><small>Please stay posted for when the apps start coming.</small></li></ul>
+          <p style="color: #a57fc0;">Nothing yet, but high hopes from the future</p>          <ul>
+          	<li style="color: #a57fc0;"><small>Please stay posted for when the apps start coming.</small></li></ul>
           <span class="badge">Coming Soon</span>        </figcaption>
         <a href="" class="btn btn-primary">Obiwonton123@gmail.com</a>
       </figure>
