--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ $(document).ready(function(){
     <article class="timeline-body wow fadeInRight col-md-5 vbox align-v" style="visibility: visible; animation-name: fadeInRight;">
       <div class="hbox">
         <div class="grow-2 box vbox align-v">
-          <h3 style="color: #8cdb7d; margin-bottom: 5px; font-weight: 300;">Colaborators Welcome</h3>
+          <h3 style="color: #8cdb7d; margin-bottom: 5px; font-weight: 300;">Collaborators Welcome</h3>
          </div>
         	        <aside class="grow-1 gradient">
 	          <div class="circle-img" style="background-image: url(user_male_circle_filled1600.png)"></div>
