--- a/index.html
+++ b/index.html
@@ -364,6 +364,11 @@ $(document).ready(function(){
 	          <div id="image" class="circle-img" id="info" style="background-image: url(http://www.clker.com/cliparts/F/F/i/T/a/6/warning-triangle-hi.png)"></div>
 	        </aside>
               </div>
+	    <br>
+	      <div id="c" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
+    <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
+    <h3 style="text-align: left;">&nbsp;Alert!</h3>
+    <p style="text-align: center;">Music 2<strong style="color: red;">Beta</strong> Live Version 0.9.25</p>
               <br>
                <div id="a" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
     <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
@@ -383,10 +388,6 @@ $(document).ready(function(){
     <p style="text-align: center;">Coder-Site Live Version 1.0 (Based on W3 School)</p>
     </div>
     <br>
-     <div id="c" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
-    <span style="font-size: 20px;" onclick="this.parentElement.style.display='none'">&times;</span>
-    <h3 style="text-align: left;">&nbsp;Alert!</h3>
-    <p style="text-align: center;">Video <strong style="color: red;">Beta</strong> Live Version 0.2.37</p>
 	</div>
 	<br>
     <div id="d" style="background-color:  #8cdb7d; color: white; cursor: pointer;">
